--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "erica-ramires-portfolio",
+
   "version": "1.0.0",
   "description": "Portfolio site for Erica Ramires with EmailJS contact form integration.",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite", 
+    "build": "vite build"
+    
+    
   },
   "dependencies": {},
   "devDependencies": {
